added optimalization to get all question